# plaza

./: .gitignore  README.md
knowledge/axum_middleware/: Cargo.toml  test.http
knowledge/axum_middleware/src/: lib.rs  main.rs
knowledge/axum_middleware/src/mid/: chain_get_auth_token.rs  chain_using_token_and_get_time_from_pg_as_extractor.rs  get_auth_token.rs  get_auth_token_as_extractor.rs  get_time_from_pg.rs  get_time_from_pg_as_extractor.rs  mod.rs  req_time.rs
knowledge/bit-op/: Cargo.toml
knowledge/bit-op/src/: main.rs
knowledge/grpc-auth/: Cargo.toml  build.rs
knowledge/grpc-auth/protos/: hello.proto
knowledge/grpc-auth/src/: client.rs  server.rs
knowledge/grpc-auth/src/pb/: hello.rs
knowledge/hotload-config/: Cargo.toml  README.md  hotload.http
knowledge/hotload-config/examples/: arc-swap.rs  etcd-watch.rs  lazy-lock.rs
knowledge/hotload-config/src/: config.rs  main.rs
knowledge/pg-inherit/: Cargo.toml  pg-inherit.http  pg-inherit.sql
knowledge/pg-inherit/src/: err.rs  form.rs  handler.rs  lib.rs  main.rs  model.rs
knowledge/static-config-hotload/: Cargo.toml  rest.http
knowledge/static-config-hotload/src/: config.rs  main.rs
plaza/: Cargo.toml  build.rs  plaza-example.toml
plaza/migrations/: 20260113064619_user.sql  20260120014322_category.sql  20260126001416_audit.sql  20260126003954_merchant.sql  20260128021309_brand.sql  20260128030105_shop.sql  20260130035607_goods.sql
plaza/protos/: active_code_messsage.proto  active_code_service.proto  audit.proto  brand_message.proto  brand_service.proto  category_message.proto  category_service.proto  merchant_message.proto  merchant_service.proto  paginate.proto  range.proto  req.proto  resp.proto  shop_message.proto  shop_service.proto  user_auth_service.proto  user_message.proto  user_service.proto  valid_code_messsage.proto  valid_code_service.proto
plaza/scripts/: REST.http  init.sql
plaza/scripts/sql/: plaza.sql
plaza/src/: api_resp.rs  captcha.rs  config.rs  err.rs  helper.rs  jwt.rs  lib.rs  mail.rs  main.rs  rds.rs  resp.rs  router.rs  state.rs  turnstile.rs  types.rs
plaza/src/activation_code/: db.rs  model.rs  service.rs
plaza/src/active_code/: abi.rs  model.rs
plaza/src/active_code/grpc/: srv.rs
plaza/src/audit/: abi.rs  model.rs
plaza/src/brand/: abi.rs  model.rs
plaza/src/brand/grpc/: srv.rs
plaza/src/category/: abi.rs  model.rs
plaza/src/category/grpc/: srv.rs
plaza/src/config/: file_config.rs  mod.rs  runtime_config.rs
plaza/src/interceptors/: mod.rs  skip_user_auth.rs  user_auth.rs
plaza/src/login_log/: db.rs  model.rs
plaza/src/merchant/: abi.rs  mod.rs  model.rs
plaza/src/merchant/grpc/: srv.rs
plaza/src/mid/: auth.rs  http_client.rs  mod.rs
plaza/src/mw/: mod.rs  user_auth.rs
plaza/src/pb/: active_code.rs  audit.rs  brand.rs  category.rs  merchant.rs  mod.rs  paginate.rs  range.rs  req.rs  resp.rs  shop.rs  user.rs  user_auth.rs  valid_code.rs
plaza/src/shop/: abi.rs  mod.rs  model.rs
plaza/src/shop/grpc/: srv.rs
plaza/src/types/: dt.rs  http_client.rs  mod.rs  pagination.rs
plaza/src/user/: abi.rs  db.rs  form.rs  handler.rs  mod.rs  model.rs  service.rs
plaza/src/user/api/: mod.rs  state.rs  web.http  web.rs
plaza/src/user/api/payload/: web.rs
plaza/src/user/grpc/: cli.rs  srv.rs
plaza/src/user_auth/: api.rs  mod.rs  payload.rs  state.rs
plaza/src/user_auth/grpc/: cli.rs  srv.rs
plaza/src/util/: code.rs  dt.rs  http.rs  mod.rs  pwd.rs
plaza/src/utils/: http.rs  log.rs  mod.rs
plaza/src/valid_code/: abi.rs  api.rs  mod.rs  model.rs  payload.rs  state.rs
plaza/src/valid_code/grpc/: cli.rs  mod.rs  srv.rs
