[package]
name = "plaza"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/plaza"
homepage = "https://axum.rs/subject/plaza"
description = "AXUM中文网专题：使用axum打造分布式商城"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
config = { version = "0.15", features = ["toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
anyhow = "1"
thiserror = "2"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "json",
    "chrono",
    # "rust_decimal",
] }
xid = "1"
bcrypt = "0.16"
