[package]
name = "plaza"
version = "0.1.0"
edition = "2024"
authors = ["axum中文网 <team@mail.axum.eu.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/plaza"
homepage = "https://axum.eu.org"
description = "axum中文网专题《使用axum打造分布式商城》"

[[bin]]
name = "user-srv"
path = "src/bin/user-srv.rs"

[[bin]]
name = "valid-code-srv"
path = "src/bin/valid-code-srv.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
lettre = { version = "0.11.19", features = ["tokio1-native-tls"] }
prost = "0.14.3"
prost-types = "0.14.3"
rand = "0.9.2"
redis = { version = "1.0.2", features = [
    "cluster-async",
    "tokio-comp",
] } # 集群连接的创建方法参见 src/rds.rs 中的 `get_cli_cluster()` 函数
reqwest = { version = "0.13.1", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "json",
] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "signal",
] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
xid = "1.1.1"

[build-dependencies]
anyhow = "1.0.100"
tonic-prost-build = "0.14.2"
