[package]
name = "grpc-auth"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
anyhow = "1.0.100"
prost = "0.14.1"
prost-types = "0.14.1"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
] }
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
anyhow = "1.0.100"
tonic-prost-build = "0.14.2"
