[package]
name = "hotload-config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.8.0"
axum = "0.8.8"
etcd-client = "0.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "net",
] }
