[package]
name = "pg-inherit"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/plaza"
homepage = "https://axum.rs/subject/plaza"
description = "AXUM中文网专题：使用axum打造分布式商城"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
anyhow = "1"
