[package]
name = "static-config-hotload"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.8.0"
axum = "0.8.8"
notify = { version = "8.2.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
    "net",
] }
